--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Guess What?</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Chicken Butt">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 html {
   height: 100%;
